--- a/k8s/doctor-app-deployment.yaml
+++ b/k8s/doctor-app-deployment.yaml
@@ -16,12 +16,12 @@ spec:
     spec:
       containers:
         - name: doctor-app
-          image: shandeep04/docker_jenkins_task2:latest
+          image: nivethitha24/docker_jenkins_task2:latest
           ports:
             - containerPort: 4000
           env:
             - name: MONGO_URI
-              value: "mongodb://localhost:27017/coderone"
+              value: "mongodb://localhost:27017/mern-vite-app"
           resources:
             limits:
               memory: "512Mi"
